fix: update link to dedupe entity resolution paper
- minor text refinement
- include linux/macos in gitignore

--- a/dedupe.ipynb
+++ b/dedupe.ipynb
@@ -6,25 +6,25 @@
    "source": [
     "<img src=\"https://complexity.asu.edu/sites/default/files/comses.jpg\" alt=\"comses.net's logo\" style=\"border: 4px solid  gray; display: flex; justify-content: center;\" height=200>\n",
     "\n",
-    "# **Entity Resolution of Tags on ComSES.net using Dedupe**\n",
+    "# **Entity Resolution of Tags on CoMSES.net using Dedupe**\n",
     "\n",
     "## **🚀 Introduction** \n",
     "><br/>   \n",
-    "> ❓ ComSES.net is a digital repository that supports discovery and good practices for software citation, digital preservation, reproducibility, and reuse.    <br/>\n",
+    "> ❓ CoMSES.net is a digital repository that supports discovery and good practices for software citation, digital preservation, reproducibility, and reuse.    <br/>\n",
     "> Visit it <a href=\"https://www.comses.net/\">here</a>   <br/>\n",
     "> <br/>\n",
     "\n",
     "<br/>\n",
-    "On ComSES.net, tags play an important role. They allow users to search for codebases that they are interested in:\n",
+    "On CoMSES.net, tags play an important role. They allow users to search for codebases that they are interested in:\n",
     "<img src=\"images/tag-search.png\" alt=\"searching for tags\" style=\"border: 4px solid  gray; display: flex; justify-content: center;\">\n",
     "<sub> <strong>Figure 1. Searching for codebases using tags</strong> </sub>\n",
     "\n",
     "There is also a cool metrics page where researchers can see how the use of various technologies have changed over time:\n",
     "<img src=\"images/metrics-page.png\" alt=\"metrics page\" height=400 style=\"border: 4px solid  gray; display: flex; justify-content: center;\">\n",
     "\n",
-    "<sub><strong> Figure 2. ComSES.net's awesome metrics page</strong></sub>\n",
+    "<sub><strong> Figure 2. CoMSES.net's awesome metrics page</strong></sub>\n",
     "\n",
-    "Since there are a great number of technologies available to use for research computing, ComSES does not enforce any rules in the way codebases are tagged by researchers during the codebase creation phase.\n"
+    "Since there are a great number of technologies available to use for research computing, CoMSES does not enforce any rules in the way codebases are tagged by researchers during the codebase creation phase.\n"
    ]
   },
   {
@@ -34,7 +34,7 @@
     "## **❓ Problem**\n",
     "Allowing researchers to write their own tags is wonderful since it allows researchers to better describe their codebase. However, a few problems arise from this scenario.\n",
     "- 1. Codebases with wrongly spelled / abbreviated tags are hard to search for.\n",
-    "- 2. Different versions of the same technology aren't grouped together on ComSES.net's metrics page.\n",
+    "- 2. Different versions of the same technology aren't grouped together on CoMSES.net's metrics page.\n",
     "  For example, on the metrics page, we would ideally like to treat NetLogo 6.1.1, NetLogo 6.2.1 and NetLogo 6.2.2 as the same thing and to display metrics accordingly."
    ]
   },
@@ -75,8 +75,8 @@
     "Use regex to group software of various version numbers.  \n",
     "This approach works reasonably well since most technologies have standard ways of specifying version numbers.\n",
     "\n",
-    "However, this method is labor-intensive and requires programmers to write regular expressions for every single thing they would like grouped. ComSES.net currently has 3000+ tags in production so this is not ideal. Also, this means that every time a new technology shows up on ComSES.net, the programmers have to be notified to write a new regex for the technology. \n",
-    "Again, this method also fails to account for small mispellings.\n"
+    "However, this method is labor-intensive and requires programmers to write regular expressions for every term to be clustered. CoMSES.net currently has 3000+ tags in production so this is not ideal. Also, this means that every time a new technology shows up on CoMSES.net, programmers might have to write a new regex for the technology. \n",
+    "This method also fails to account for small mispellings.\n"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "source": [
     "\n",
     "## **🤖 Using Machine Learning**\n",
-    "We want to group similar tags. In machine learning, this task is called [entity resolution](https://www.ibm.com/docs/en/iii/9.0.0?topic=insight-entity-resolution). \n",
+    "We want to group similar tags. In machine learning, this task is called [entity resolution](https://doi.org/10.1145/2487575.2506179). \n",
     "> <br/>  \n",
     "> ❓ Entity resolution is the process of identifying and merging   \n",
     "> duplicate or similar records in a dataset.   <br/>\n",
